--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -460,15 +460,15 @@ La varianza del término de error por país se obtiene al estimar modelo (\ref{eq:
 
 Para estimar el modelo de regresión (\ref{eq:regression}) se usan datos de exportaciones e importaciones anuales de la base de datos del Banco Mundial \cite{WorldBank2015}. Específicamente, se emplean las series de exportaciones e importaciones anuales de bienes y servicios expresados en dólares de Estados Unidos, constantes del año 2005. El comercio internacional se obtiene como la suma de ambas series y luego se calcula su crecimiento anual. 
 
-En total se obtienen 6,711 observaciones de crecimiento correspondientes a 179 países y al período 1960--2014. En la tabla \ref{tab:stats_crecimiento} se muestran estadísticas descriptivas de esta variable. Al observar esta tabla pueden llamar la atención los valores -70\% y 182\% observados en el mínimo y en el máximo de la variable. No obstante, los percentiles muestran que estos valores son bastante inusuales y obedecen a circunstancias excepcionales. Por ejemplo, el 182\% se registró en Libia en el año 2012, cuando las compañías de producción petrolera volvieron al país luego de detener sus operaciones durante el conflicto de 2011. Por otro lado, la disminución del 70\% ocurrió en 1990 en Bulgaria, fuertemente influenciada por el colapso  del comunismo y la posterior transición a la democracia, que se extendió desde fines de 1989 hasta 1991. 
+En total se obtienen 6,711 observaciones de crecimiento correspondientes a 179 países y al período 1960--2014. En la tabla \ref{tab:stats_comercio} se muestran estadísticas descriptivas de esta variable. Al observar esta tabla pueden llamar la atención los valores -70\% y 182\% observados en el mínimo y en el máximo de la variable. No obstante, los percentiles muestran que estos valores son bastante inusuales y obedecen a circunstancias excepcionales. Por ejemplo, el 182\% se registró en Libia en el año 2012, cuando las compañías de producción petrolera volvieron al país luego de detener sus operaciones durante el conflicto de 2011. Por otro lado, la disminución del 70\% ocurrió en 1990 en Bulgaria, fuertemente influenciada por el colapso  del comunismo y la posterior transición a la democracia, que se extendió desde fines de 1989 hasta 1991. 
 
 \begin{table}[htpb]
 	\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
 	\resizebox{\textwidth}{!}{
 		{
 			\begin{threeparttable}
-				\caption{Líderes y crecimiento del comercio internacional}
-				\label{fig:wald_test}
+				\caption{Estadísticas de resumen del comercio internacional}
+				\label{tab:stats_comercio}
 				\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 				\begin{tabular}{lccccccc} \toprule\toprule
 					Variable & Observaciones & Media & \begin{tabular}[c]{@{}c@{}}Desviación\\estándar\end{tabular} & Mínimo & \begin{tabular}[c]{@{}c@{}}Percentil\\1\%\end{tabular} &\begin{tabular}[c]{@{}c@{}}Percentil\\99\%\end{tabular}& Máximo \\ \midrule
@@ -651,12 +651,22 @@ Cuando un líder evalúa una política relativa al comercio internacional debe pond
 \subsubsection*{Amabilidad}
 
 El factor amabilidad ha sido asociado consistentemente con la disposición de líderes políticos a apoyar y promover la cooperación internacional.
-\citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Este investigador encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales. Por otra parte, \cite{Schoen2007} argumenta que la personalidad afecta las opiniones en esta materia tanto como otros factores como ideología y trasfondo social. En particular, muestra que el factor amabilidad (junto a apertura al cambio) vuelve a las personas más susceptibles de apoyar la cooperación internacional. Por último, \citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos de la capacidad para confiar en otros, incluso después de controlar por partido e ideología del legislador. Estos resultados sugieren que líderes más amables están más abiertos a cooperar y relacionarse con otros países, lo que motiva el planteamiento de la siguiente hipótesis:
+\citeA{Hermann1980} estudia el impacto de 6 características personales de 45 líderes nacionales en sus comportamientos relativos a política exterior. Este investigador encuentra una relación positiva entre la capacidad de un líder para confiar en otros (amabilidad) y su voluntad para realizar compromisos internacionales. Por otra parte, \citeA{Schoen2007} argumenta que la personalidad afecta las opiniones en esta materia tanto como otros factores como ideología y trasfondo social. En particular, muestra que el factor amabilidad (junto a apertura al cambio) vuelve a las personas más susceptibles de apoyar la cooperación internacional. Por último, \citeA{Crichlow2002}  estudia el efecto de ciertos atributos de personalidad de legisladores en Estados Unidos sobre el apoyo hacia medidas que buscan reducir las barreras al comercio internacional. Encuentra efectos significativos de la capacidad para confiar en otros, incluso después de controlar por partido e ideología del legislador. Estos resultados sugieren que líderes más amables están más abiertos a cooperar y relacionarse con otros países, lo que motiva el planteamiento de la siguiente hipótesis:
 \vspace{.5cm}
 
 \noindent\textbf{Hipótesis 3.} \textit{El comercio internacional crece más durante el mandato de líderes más amables.} 
 
+\subsection*{Apertura al cambio}
 
+Las personas más abiertas al cambio se caracterizan predominantemente por la búsqueda de nuevas experiencias y por un nivel elevado de curiosidad intelectual \cite{John2008}. Si bien estas características no se relacionan directamente con preferencias sobre el comercio internacional,  resultados en la literatura sugieren que, al igual que los individuos más amables, los más abiertos al cambio son más proclives a confiar y cooperar con otros. \citeA{DOHMEN2008} muestran que existe una relación positiva entre el factor apertura al cambio y cuánto un individuo confía en otras personas. Para el factor amabilidad se encuentra una relación similar, pero de mayor magnitud. Similarmente, en \cite{Schoen2007} se muestra que personas con mayores niveles en los factores amabilidad y apertura al cambio apoyan en mayor medida la cooperación internacional. En consecuencia, cabe esperar una relación positiva entre la disposición a comerciar con otros países y el factor apertura al cambio, lo cual se enuncia en la siguiente hipótesis:  
+\vspace{.5cm}
+
+\noindent\textbf{Hipótesis 4.} \textit{El comercio internacional crece más durante el mandato de líderes más abiertos al cambio.} 
+
+
+\subsection*{Inestabilidad emocional}
+
+A diferencia de los casos anteriores, no se encontró evidencia suficiente para elaborar una hipótesis sobre la relación entre el factor inestabilidad emocional y el comercio emocional. Si bien \citeA{DOHMEN2008} reportan una relación negativa entre la inestabilidad emocional y la confianza en otras personas, lo cual sugiere que líderes más inestables son más aversos a promover la cooperación internacional, no se encontraron otros resultados que apoyen esta idea. 
 
            %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
            %   CAPITULO 2
@@ -697,11 +707,17 @@ Los puntajes en las categorías LIWC de todos los líderes son procesados mediante
 
 Posteriormente, la herramienta \textit{Personality Recognizer} usa estos puntajes para estimar los Cinco Grandes mediante modelos estadísticos. Específicamente, en este trabajo se utilizó el modelo Support Vector Machines for Regression (SMOreg), pues es el que reporta mejor desempeño en la tarea de estimar la personalidad de individuos en pruebas no orales de acuerdo a \citeA{Mairesse2007}. Este método entrega como resultado final los cinco estimadores medidos en una escala continua de 1 a 7 (etapa final en la Figura \ref{fig:bf_discurso}).
 
-\subsection{Una posible objeción}
-Se debe reconocer que la estrategia de usar discursos políticos para medir la personalidad de los líderes presenta una potencial dificultad. La primera es la posibilidad de que los líderes pueden tener incentivos para representar una falsa personalidad frente a la opinión pública a través de sus discursos. Probablemente un político prefiere proyectarse como extravertido más que introvertido, amable más que conflictivo, emocionalmente estable más que inestable, responsable más que flojo, o abierto más que estrecho de miras \cite{Ramey2014}. Un líder podría entonces adoptar conscientemente un patrón lingüístico en sus discursos para proyectar los rasgos de personalidad deseados. Pero, aunque es concebible que esto ocurra esto en ocasiones, es más bien difícil de mantener en el tiempo. 
+\subsection{Dos posibles objeciones}
+Se debe reconocer que la estrategia de usar discursos políticos para medir la personalidad de los líderes presenta dos potenciales dificultades. La primera es la posibilidad de que los líderes pueden tener incentivos para representar una falsa personalidad frente a la opinión pública a través de sus discursos. Probablemente un político prefiere proyectarse como extravertido más que introvertido, amable más que conflictivo, emocionalmente estable más que inestable, responsable más que flojo, o abierto más que estrecho de miras \cite{Ramey2014}. Un líder podría entonces adoptar conscientemente un patrón lingüístico en sus discursos para proyectar los rasgos de personalidad deseados. Pero, aunque es concebible que esto ocurra esto en ocasiones, es más bien difícil de mantener en el tiempo. 
 
-Por otro lado, es razonable suponer que existen indicios lingüísticos relacionados con los rasgos de personalidad que son desconocidos a los líderes, pero que pueden ser capturados por un algoritmo de medición de la personalidad, tal como el que ha sido descrito en la sección previa. La aparición de estos indicios lingüísticos en los discursos debería presentar gran variabilidad a través de los líderes, precisamente pues los líderes no son conscientes de su relación con los tipos de personalidad.
-En consecuencia, aun si los políticos intentan sistemáticamente proyectar una personalidad adulterada a través de sus discursos, los estimadores de personalidad obtenidos presentarán una variación que refleja la variación inherente a los verdaderos rasgos de personalidad de los líderes \cite{Ramey2014}.
+Por otro lado, incluso bajo el supuesto de que un líder escoge cuidadosamente sus palabras para proyectar un tipo de personalidad deseado, es razonable suponer que existen relaciones entre el lenguaje y la personalidad que los líderes no conocen, pero que sí pueden ser detectadas mediante métodos estadísticos y ser empleados en algoritmos de predicción automática de la personalidad. 
+En consecuencia, aun si los políticos intentan sistemáticamente proyectar una personalidad adulterada a través de sus discursos, los estimadores de personalidad obtenidos presentarán una variación que refleja la variabilidad inherente a los verdaderos rasgos de personalidad de los líderes \cite{Ramey2014}.
+
+La segunda posible objeción a la metodología empleada es que los discursos políticos a menudo no son escritos por los mismos líderes, sino por escritores de discursos profesionales, y por lo tanto no reflejan la personalidad del líder que los pronuncia. Por este motivo algunos estudios\footnote{Por ejemplo \cite{Crichlow2005,Hermann1980}.} se han enfocado en el uso de comentarios espontáneos de políticos, en lugar de discursos previamente preparados. Existe poca evidencia de que el uso de comentarios espontáneos sea más efectivo. \citeA{Schafer2000} sugieren que los comentarios espontáneos reflejan de mejor manera las características de personalidad que los discursos preparados. Sin embargo, este análisis fue realizado sobre las declaraciones de un solo líder (Bill Clinton) y, en palabras de los autores, estos resultados no son concluyentes para decidir si una fuente es más apropiada que la otra. 
+
+En favor del uso de discursos previamente preparados se debe considerar que aun aquellos políticos que no escriben sus propios discursos son responsables por las palabras que pronuncian, y que el peso de esta responsabilidad es aun mayor en el caso de líderes nacionales. Por este motivo, estos líderes deben poner atención a los discursos que reciben. En muchos casos deben agregar frases propias, cortar párrafos, escribir secciones enteras o incluso reenviar discursos enteros para que sean escritos bajo nuevas directrices. Por otro lado, los escritores de discursos profesionales suelen señalar que parte importante de su labor es imitar el estilo y las palabras de los líderes para quienes escriben los discursos \cite{einhorn1982ghosts,einhorn1988ghosts}. 
+En consecuencia, los discursos resultantes usualmente reflejan el estilo y las palabras que el mismo líder hubiese incluido.
+Por último, múltiples estudios han empleado discursos previamente preparados para extraer características de los políticos que los pronuncian (e.g. posturas políticas \cite{Laver2016}; género, edad e ideología \cite{Diermeier2012,Dahllf2012,Yu2008}; personalidad \cite{Ramey2014}), lo que lleva a los autores del presente estudio a ser  optimistas de la efectividad de la metodología empleada. 
  
 \subsection{Estadísticas de resumen}\label{sec:sum_stat}
 En la tabla \ref{tab:resumen} se presentan estadísticas de resumen de las medidas de personalidad estimadas. En el panel (a) se muestran los resultados para los líderes en la muestra de este estudio. De las 193 observaciones disponibles, 96 corresponden a líderes que dejaron el cargo de forma inesperada y 97 corresponden a sucesores de líderes que salieron inesperadamente. Las estimaciones de personalidad de los sucesores serán empleados en un análisis de robustez de los resultados principales. 
