--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1466,3 +1466,102 @@
 	year={1992},
 	publisher={Pen and Sword}
 }
+@article{DOHMEN2008,
+	author = {Dohmen, Thomas and Falk, Armin and Huffman, David and Sunde, Uwe},
+	doi = {10.1111/j.1465-7295.2007.00082.x},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/representative{\_}reciprocity{\_}short{\_}EcInq{\_}12.pdf:pdf},
+	isbn = {4922838945},
+	issn = {00952583},
+	journal = {Economic Inquiry},
+	keywords = {age,d63,gender,j3,j6,jel codes,personality,reciprocity,soep,trust},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {84--90},
+	title = {{Representative Trust and Reciprocity: Prevalence and Determinants}},
+	url = {http://doi.wiley.com/10.1111/j.1465-7295.2007.00082.x},
+	volume = {46},
+	year = {2008}
+}
+@article{Schafer2000,
+	abstract = {FOOD},
+	author = {Schafer, Mark and Crichlow, Scott},
+	doi = {10.1111/0162-895X.00204},
+	file = {:C$\backslash$:/Users/Roberto/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Schafer, Crichlow - 2000 - Bill Clinton's Operational Code Assessing Source Material Bias.pdf:pdf},
+	issn = {0162-895X},
+	journal = {Political Psychology},
+	keywords = {at-a-distance measures,between measurements of leaders,bill clinton,comments and those based,do substantive differences exist,on prepared comments,operational code,personal characteristics based on,source material,spontaneous,the overarching question in,this paper is,to investigate this question},
+	mendeley-groups = {Personality},
+	number = {3},
+	pages = {559--571},
+	title = {{Bill Clinton's Operational Code: Assessing Source Material Bias}},
+	url = {http://doi.wiley.com/10.1111/0162-895X.00204},
+	volume = {21},
+	year = {2000}
+}
+@article{einhorn1988ghosts,
+	title={The ghosts talk: Personal interviews with three former speechwriters},
+	author={Einhorn, Lois J},
+	year={1988},
+	publisher={Taylor \& Francis}
+}
+@article{einhorn1982ghosts,
+	title={The ghosts unmasked: A review of literature on speechwriting},
+	author={Einhorn, Lois J},
+	journal={Communication Quarterly},
+	volume={30},
+	number={1},
+	pages={41--47},
+	year={1982},
+	publisher={Taylor \& Francis}
+}
+@article{Laver2016,
+	author = {Laver, Michael and Benoit, Kenneth and Garry, John and The, Source and Political, American and Review, Science and May, No and Laver, Michael and Benoit, Kenneth and College, Trinity},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/policy positions.pdf:pdf},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {311--331},
+	title = {{Extracting Policy Positions from Political Texts Using Words as Data Published by : American Political Science Association Extracting Policy Positions from Political Texts Using Words as Data}},
+	volume = {97},
+	year = {2016}
+}
+@article{Dahllf2012,
+	author = {Dahllof, Mats},
+	doi = {10.1093/llc/fqs010},
+	issn = {02681145},
+	journal = {Literary and Linguistic Computing},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {139--153},
+	title = {{Automatic prediction of gender, political affiliation, and age in Swedish politicians from the wording of their speeches-A comparative study of classifiability}},
+	volume = {27},
+	year = {2012}
+}
+@article{Diermeier2012,
+	abstract = {Legislative speech records from the 101st to 108th Congresses of the US Senate are analysed to study political ideologies. A widely-used text classification algorithm – Support Vector Machines (SVM) – allows the extraction of terms that are most indicative of conservative and liberal positions in legislative speeches and the prediction of senators’ ideological positions, with a 92 per cent level of accuracy. Feature analysis identifies the terms associated with conservative and liberal ideologies. The results demonstrate that cultural references appear more important than economic references in distinguishing conservative from liberal congressional speeches, calling into question the common economic interpretation of ideological differences in the US Congress.},
+	author = {Diermeier, Daniel and Godbout, Jean-Fran{\c{c}}ois and Yu, Bei and Kaufmann, Stefan},
+	doi = {10.1017/S0007123411000160},
+	issn = {0007-1234},
+	journal = {British Journal of Political Science},
+	mendeley-groups = {Personality},
+	number = {01},
+	pages = {31--55},
+	title = {{Language and Ideology in Congress}},
+	volume = {42},
+	year = {2012}
+}
+@article{Yu2008,
+	author = {Yu, Bei and Kaufmann, Stefan and Diermeier, Daniel},
+	doi = {10.1080/19331680802149608},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Personality/bei yu.pdf:pdf},
+	isbn = {1933168080},
+	issn = {1933-1681},
+	journal = {Journal of Information Technology {\&} Politics},
+	keywords = {an underutilized source,evaluation,extract and process,generalizability,ideology,in part due to,machine learning,of data in political,of rigorous methods to,political text has been,science,text classification,the lack},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {33--48},
+	title = {{Classifying Party Affiliation from Political Speech}},
+	volume = {5},
+	year = {2008}
+}
+
