--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -310,7 +310,6 @@
 	pages = {225--251},
 	pmid = {1635043},
 	title = {{Recurrent Personality Factors Based on Trait Ratings}},
-	url = {https://ejwl.idm.oclc.org/login?url=http://search.ebscohost.com/login.aspx?direct=true{\&}db=sih{\&}AN=9208170745{\&}site=ehost-live},
 	volume = {60},
 	year = {1992}
 }
@@ -428,7 +427,6 @@
 	mendeley-groups = {Personality},
 	pages = {253},
 	title = {{Predicting personality with social media}},
-	url = {http://portal.acm.org/citation.cfm?doid=1979742.1979614},
 	year = {2011}
 }
 @article{Golbeck2011a,
@@ -509,7 +507,6 @@
 	pages = {124--127},
 	publisher = {Elsevier Inc.},
 	title = {{The Five-Factor Model of personality and relationship satisfaction of intimate partners: A meta-analysis}},
-	url = {http://dx.doi.org/10.1016/j.jrp.2009.09.004},
 	volume = {44},
 	year = {2010}
 }
@@ -527,7 +524,6 @@
 	pages = {116--130},
 	pmid = {17605593},
 	title = {{Personality predictors of academic outcomes: Big five correlates of GPA and SAT scores.}},
-	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.93.1.116},
 	volume = {93},
 	year = {2007}
 }
@@ -612,7 +608,6 @@
 	number = {01},
 	pages = {111},
 	title = {{Personality and Political Attitudes: Relationships across Issue Domains and Political Contexts}},
-	url = {http://journals.cambridge.org/action/displayFulltext?type=6{\&}fid=7449476{\&}jid=PSR{\&}volumeId=104{\&}issueId=01{\&}aid=7449472{\&}bodyId={\&}membershipNumber={\&}societyETOCSession={\&}fulltextType=RA{\&}fileId=S0003055410000031{\#}rfh1},
 	volume = {104},
 	year = {2010}
 }
@@ -628,7 +623,6 @@
 	number = {2},
 	pages = {208--232},
 	title = {{The Big Five Personality Traits and the Life Course: A 45-Year Longitudinal Study}},
-	url = {http://www.sciencedirect.com/science/article/pii/S0092656699922432},
 	volume = {33},
 	year = {1999}
 }
@@ -679,7 +673,6 @@
 	pages = {457--480},
 	pmid = {19443734},
 	title = {{Sexual Assault and Rape Perpetration by College Men}},
-	url = {http://jiv.sagepub.com/content/25/3/457.abstract},
 	volume = {25},
 	year = {2010}
 }
@@ -730,7 +723,6 @@
 	pages = {86--93},
 	publisher = {Elsevier Ltd},
 	title = {{Exploring the relationship between Internet ethics in university students and the big five model of personality}},
-	url = {http://dx.doi.org/10.1016/j.compedu.2009.01.001},
 	volume = {53},
 	year = {2009}
 }
@@ -765,7 +757,6 @@
 	pages = {63--76},
 	publisher = {Elsevier B.V.},
 	title = {{Estimating the effects of free trade agreements on international trade flows using matching econometrics}},
-	url = {http://dx.doi.org/10.1016/j.jinteco.2008.09.006},
 	volume = {77},
 	year = {2009}
 }
@@ -792,7 +783,6 @@
 	number = {5},
 	pages = {693--711},
 	title = {{Legislators' Personality Traits and Congressional Support for Free Trade}},
-	url = {http://www.voxeurop.eu/nl/content/article/4015361-vrijhandelszone-de-voors-en-tegens},
 	volume = {46},
 	year = {2002}
 }
@@ -810,7 +800,6 @@
 	number = {1},
 	pages = {7--46},
 	title = {{Explaining Foreign Policy Behavior Using the Personal Characteristics of Political Leaders}},
-	url = {http://www.jstor.org/stable/2600126?origin=crossref},
 	volume = {24},
 	year = {1980}
 }
@@ -827,7 +816,6 @@
 	number = {2},
 	pages = {179--205},
 	title = {{Psychological Influences on the Policy Choices of Secretaries of State and Foreign Ministers}},
-	url = {http://www.scopus.com/inward/record.url?eid=2-s2.0-30444454539{\&}partnerID=tZOtx3y1},
 	volume = {40},
 	year = {2005}
 }
@@ -845,7 +833,6 @@
 	pages = {820--828},
 	pmid = {20435951},
 	title = {{Testing predictions from personality neuroscience. Brain structure and the big five}},
-	url = {http://www.ncbi.nlm.nih.gov/pubmed/20435951},
 	volume = {21},
 	year = {2010}
 }
@@ -863,7 +850,6 @@
 	pages = {946--951},
 	publisher = {Elsevier Ltd},
 	title = {{Optimism and the Big Five factors of personality: Beyond Neuroticism and Extraversion}},
-	url = {http://dx.doi.org/10.1016/j.paid.2011.07.033},
 	volume = {51},
 	year = {2011}
 }
@@ -881,7 +867,6 @@
 	pages = {439--446},
 	pmid = {3701589},
 	title = {{Expectation of success following noncontingent punishment in introverts and extraverts.}},
-	url = {10.1037/0022-3514.50.2.439$\backslash$nhttp://proxy.cityu.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true{\&}db=psyh{\&}AN=1986-14512-001{\&}site=ehost-live},
 	volume = {50},
 	year = {1986}
 }
@@ -896,7 +881,6 @@
 	number = {3914},
 	pages = {1--57},
 	title = {{Environmental Impacts of a North American Free Trade Agreement}},
-	url = {http://www.nber.org/papers/w3914},
 	volume = {No. 3914},
 	year = {1991}
 }
@@ -952,7 +936,6 @@
 	number = {2-3},
 	pages = {659--669},
 	title = {{Psychological and Biological Foundations of Time Preference}},
-	url = {<Go to ISI>://000265366000031},
 	volume = {7},
 	year = {2009}
 }
@@ -971,7 +954,6 @@
 	pages = {40--57},
 	pmid = {16435937},
 	title = {{A meta-analytic investigation of conscientiousness in the prediction of job performance: examining the intercorrelations and the incremental validity of narrow traits.}},
-	url = {http://www.ncbi.nlm.nih.gov/pubmed/16435937},
 	volume = {91},
 	year = {2006}
 }
@@ -1004,7 +986,6 @@
 	pages = {77--86},
 	pmid = {254980},
 	title = {{Employee selection: Will intelligence and conscientiousness do the Job?}},
-	url = {http://www.jstor.org/stable/4165443},
 	volume = {12},
 	year = {1998}
 }
@@ -1019,7 +1000,6 @@
 	number = {2},
 	pages = {161--175},
 	title = {{Economic and political determinants of foreign direct investment}},
-	url = {http://www.sciencedirect.com/science/article/pii/0305750X85900026},
 	volume = {13},
 	year = {1985}
 }
@@ -1099,7 +1079,6 @@
 	pages = {211--213},
 	publisher = {Elsevier B.V.},
 	title = {{FDI and economic growth: New evidence on the role of financial markets}},
-	url = {http://dx.doi.org/10.1016/j.econlet.2010.01.027},
 	volume = {107},
 	year = {2010}
 }
@@ -1131,7 +1110,6 @@
 	number = {January},
 	pages = {261--338},
 	title = {{Trade Policy and Economic Growth: A Skeptic's Guide to the Cross-National Evidence}},
-	url = {http://ideas.repec.org/h/nbr/nberch/11058.html},
 	volume = {15},
 	year = {2001}
 }
@@ -1197,7 +1175,6 @@
 	series = "Handbook of Economic Growth ",
 	issn = "1574-0684",
 	doi = "http://dx.doi.org/10.1016/S1574-0684(05)01006-3",
-	url = "http://www.sciencedirect.com/science/article/pii/S1574068405010063",
 	author = "Daron Acemoglu and Simon Johnson and James A. Robinson",
 }
 @article {Dawson1998Inst,
@@ -1208,7 +1185,6 @@
 	number = {4},
 	publisher = {Blackwell Publishing Ltd},
 	issn = {1465-7295},
-	url = {http://dx.doi.org/10.1111/j.1465-7295.1998.tb01739.x},
 	doi = {10.1111/j.1465-7295.1998.tb01739.x},
 	pages = {603--619},
 	year = {1998},
@@ -1223,8 +1199,7 @@
 	year= "2000",
 	abstract="This article opens with a discussion of the types of institutions that allow markets to perform adequately. While we can identify in broad terms what these are, there is no unique mapping between markets and the non-market institutions that underpin them. The paper emphasizes the importance of ``local knowledge'', and argues that a strategy of institution building must not over-emphasize best-practice ``blueprints'' at the expense of experimentation. Participatory political systems are the most effective ones for processing and aggregating local knowledge. Democracy is a meta-institution for building good institutions. A range of evidence indicates that participatory democracies enable higher-quality growth.",
 	issn="1936-6167",
-	doi="10.1007/BF02699764",
-	url="http://dx.doi.org/10.1007/BF02699764"
+	doi="10.1007/BF02699764"
 }
 @article{Dollar2003133,
 	title = "Institutions, trade, and growth ",
@@ -1236,7 +1211,6 @@
 	note = "",
 	issn = "0304-3932",
 	doi = "http://dx.doi.org/10.1016/S0304-3932(02)00206-4",
-	url = "http://www.sciencedirect.com/science/article/pii/S0304393202002064",
 	author = "David Dollar and Aart Kraay",
 	keywords = "Trade",
 	keywords = "Growth "
@@ -1251,7 +1225,6 @@
 	note = "",
 	issn = "0304-3932",
 	doi = "http://dx.doi.org/10.1016/0304-3932(93)90026-C",
-	url = "http://www.sciencedirect.com/science/article/pii/030439329390026C",
 	author = "William Easterly and Michael Kremer and Lant Pritchett and Lawrence H Summers",
 	keywords = "Economic growth ",
 	abstract = "Much of the new growth literature stresses country characteristics, such as education levels or political stability, as the dominant determinant of growth. However, growth rates are highly unstable over time, with a correlation across decades of 0.1 to 0.3, while country characteristics are stable, with cross-decade correlations of 0.6 to 0.9. Shocks, especially those to terms of trade, play a large role in explaining variance in growth. These findings suggest either that shocks are important relative to country characteristics in determining long-run growth, or that worldwide technological change determines long-run growth while country characteristics determine relative income levels. "
@@ -1266,7 +1239,6 @@
 	note = "Symposium: Labor Regulation In Developing CountriesSymposium: Labor Regulation In Developing Countries ",
 	issn = "0147-5967",
 	doi = "http://dx.doi.org/10.1016/j.jce.2008.08.005",
-	url = "http://www.sciencedirect.com/science/article/pii/S0147596708000693",
 	author = "Axel Dreher and Michael J. Lamla and Sarah M. Lein and Frank Somogyi",
 	keywords = "Reforms",
 	keywords = "Economic policy",
@@ -1300,7 +1272,6 @@
 	number = {1},
 	pages = {63--96},
 	title = {{Is There Method in Our Madness? Ways of Assessing Cognition in International Relations}},
-	url = {http://www.jstor.org/stable/254444$\backslash$nhttp://www.jstor.org.ubproxy.ub.uni-frankfurt.de/stable/pdfplus/254444.pdf?acceptTC=true},
 	volume = {42},
 	year = {1998}
 }
@@ -1372,7 +1343,6 @@
 	mendeley-groups = {Personality},
 	pages = {1--46},
 	title = {{Toward the integration of personality theory and decision theory in the explanation of economic behavior}},
-	url = {http://www.cogsci.umn.edu/colloquia/colloquia{\_}S11/Aldo Rustichini.pdf},
 	volume = {2},
 	year = {2011}
 }
@@ -1398,7 +1368,6 @@
 	pages = {3--16},
 	pmid = {16313378},
 	title = {{Of the Words Character and Personality}},
-	url = {http://doi.wiley.com/10.1111/j.1467-6494.1932.tb02209.x},
 	volume = {1},
 	year = {1932}
 }
@@ -1478,7 +1447,6 @@
 	number = {1},
 	pages = {84--90},
 	title = {{Representative Trust and Reciprocity: Prevalence and Determinants}},
-	url = {http://doi.wiley.com/10.1111/j.1465-7295.2007.00082.x},
 	volume = {46},
 	year = {2008}
 }
@@ -1494,7 +1462,6 @@
 	number = {3},
 	pages = {559--571},
 	title = {{Bill Clinton's Operational Code: Assessing Source Material Bias}},
-	url = {http://doi.wiley.com/10.1111/0162-895X.00204},
 	volume = {21},
 	year = {2000}
 }
@@ -1564,4 +1531,23 @@
 	volume = {5},
 	year = {2008}
 }
-
+@article{DeRaad1998,
+	author = {{De Raad}, Boele},
+	doi = {10.1037/1016-9040.3.2.113},
+	file = {:C$\backslash$:/Users/Roberto/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/De Raad - 1998 - Five Big, Big Five Issues.pdf:pdf},
+	issn = {10169040},
+	journal = {European Psychologist},
+	keywords = {ageneral communication medium,and the particular status,big five,big five approach,crosscultural comparisons,five approach,five model and other,including its role as,of the,personality models,taxonomy,the big,the competing positions of,trait structure,with a description of},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {113--124},
+	title = {{Five Big, Big Five Issues}},
+	volume = {3},
+	year = {1998}
+}
+@article{polity2012polity,
+	title={Polity IV Project: Political Regime Characteristics and Transitions, 1800-2012},
+	author={Marshall, Monty G and Jaggers, Keith},
+	journal={On-line (http://www. systemicpeace. org/polity/polity4. htm)},
+	year={2012}
+}
